# seasonals-hell

./: .gitignore  README.md  pyproject.toml  requirements.txt  seasonals.py
seasonals_hell/: __init__.py  seasonals.py
