[project]
name = "seasonals-hell"
dynamic = ["version"]
description = "List current seasonal animes in markdown"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "odrling", email = "florianbadie@odrling.xyz" }]
requires-python = ">=3.9"
dependencies = ["pydantic", "requests", "typer"]

[project.scripts]
seasonals-hell = "seasonals_hell.seasonals:app"

[project.urls]
homepage = "https://github.com/Japan7/seasonals-hell"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
